@@ -47,6 +47,13 @@ Next Release
 
       ver:3.0 server:supervisor serial:21 ... 
 
+  - Specific event payload serializations have changed.  All event
+    types that deal with processes now include the pid of the process
+    that the event is describing.  The PROCESS_COMMUNICATION_EVENT
+    serializations now separate the data sent by the process from the
+    "headers" using two linefeed characters (to make parsing easier).
+    In event serialization "header" values, we've removed the space
+    between the header name and the value.
 
 3.0a2
 
